attemp fix reset password